feat: add component header, angular material, icons, menu

--- a/devmall/src/app/header/header.component.html
+++ b/devmall/src/app/header/header.component.html
@@ -1,31 +1,17 @@
 <header>
-  <h1>
-    <span>Dev</span><span>Mall</span>
-    <nav>
-      <ul>
-
-        <li>
-          <a>Produtos</a>
-        </li>
-
-        <li>
-          <a>
-            Carrinho
-            <i class="fa-solid fa-cart-shopping"></i>
-          </a>
-          
-        </li>
-
-        <li>
-          <a>Contatos</a>
-        </li>
-
-        <li>
-          <a></a>
-        </li>
-
-      </ul>
-    </nav>
-
-  </h1>
+  <p>
+    <mat-toolbar color="primary">
+      <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon">
+        <mat-icon>menu</mat-icon>
+      </button>
+      <span class="logo-dev">Angular</span><span class="logo-mall">TechStore</span>
+      <span class="example-spacer"></span>
+      <button mat-icon-button class="example-icon favorite-icon" aria-label="Example icon-button with heart icon">
+        <mat-icon>shopping_cart</mat-icon>
+      </button>
+      <button mat-icon-button class="example-icon" aria-label="Example icon-button with share icon">
+        <mat-icon>home</mat-icon>
+      </button>
+    </mat-toolbar>
+  </p>
 </header>
