--- a/devmall/src/app/header/header.component.css
+++ b/devmall/src/app/header/header.component.css
@@ -1,5 +1,3 @@
-
-
 .example-spacer {
     flex: 1 1 auto;
   }
@@ -12,7 +10,9 @@ section {
   display: table-cell;
   max-width: 600px;
   padding-right: 120px;
+  padding-left: 80px;
 }
+
 
 .logo {
   margin-left: 40px;
@@ -56,4 +56,8 @@ input[type="text"]:focus {
   border: 2px solid #9500b3; /* Estilo da borda ao receber foco */
   background-color: rgba(0, 123, 255, 0.1); /* Cor de fundo quando em foco */
   box-shadow: 0 0 0px rgba(0, 123, 255, 0.4); /* Sombra ao receber foco */
+}
+
+a {
+  font-size: 20px;
 }
